// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LTIStatus LTIStatus component with an externalSystemLabel and no lti state returns renderError 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-synced"
>
  <h2>
    There was a problem sending your score to mocklti.
  </h2>
  <p>
    Don’t worry - your score is safely recorded here. We just weren’t able to send it to mocklti. Click the button below to resend your score:
  </p>
  <div
    className="obojobo-draft--components--button is-dangerous align-center"
  >
    <button
      disabled={undefined}
      onClick={undefined}
      tabIndex={undefined}
    >
      Try again anyway
    </button>
  </div>
</div>
`;

exports[`LTIStatus LTIStatus component with error shows a loading state 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-synced"
>
  <h2>
    There was a problem sending your score to mocklti.
  </h2>
  <p>
    Don’t worry - your score is safely recorded here. We just weren’t able to send it to mocklti. Click the button below to resend your score:
  </p>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center"
  >
    <button
      disabled={true}
      onClick={undefined}
      tabIndex={undefined}
    >
      Resending Score...
    </button>
  </div>
</div>
`;

exports[`LTIStatus LTIStatus component with error shows additional information if errorCount is above 0 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-synced"
>
  <h2>
    There was a problem sending your score to mocklti.
  </h2>
  <p>
    Don’t worry - your score is safely recorded here. We just weren’t able to send it to mocklti. Click the button below to resend your score:
  </p>
  <p>
    <strong>
      Sorry - That didn't work.
    </strong>
     Most likely the connection to mocklti has expired and just needs to be refreshed. Please close this tab or window, reopen this module from mocklti, return to this page and then resend your score.
  </p>
  <div
    className="obojobo-draft--components--button is-dangerous align-center"
  >
    <button
      disabled={undefined}
      onClick={undefined}
      tabIndex={undefined}
    >
      Try again anyway
    </button>
  </div>
</div>
`;

exports[`LTIStatus LTIStatus component with isPreviewing true returns notLTI 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-lti"
>
   
</div>
`;

exports[`LTIStatus LTIStatus component with lti state GRADEBOOK_STATUS_ERROR_INVALID returns renderError 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-synced"
>
  <h2>
    There was a problem sending your score to mocklti.
  </h2>
  <p>
    Don’t worry - your score is safely recorded here. We just weren’t able to send it to mocklti. Click the button below to resend your score:
  </p>
  <div
    className="obojobo-draft--components--button is-dangerous align-center"
  >
    <button
      disabled={undefined}
      onClick={undefined}
      tabIndex={undefined}
    >
      Resend score
    </button>
  </div>
</div>
`;

exports[`LTIStatus LTIStatus component with lti state GRADEBOOK_STATUS_ERROR_NEWER_SCORE_UNSENT returns renderError 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-synced"
>
  <h2>
    There was a problem sending your score to mocklti.
  </h2>
  <p>
    Don’t worry - your score is safely recorded here. We just weren’t able to send it to mocklti. Click the button below to resend your score:
  </p>
  <div
    className="obojobo-draft--components--button is-dangerous align-center"
  >
    <button
      disabled={undefined}
      onClick={undefined}
      tabIndex={undefined}
    >
      Resend score
    </button>
  </div>
</div>
`;

exports[`LTIStatus LTIStatus component with lti state GRADEBOOK_STATUS_OK_GRADEBOOK_MATCHES_SCORE returns synced 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-synced"
>
  ✔ Your recorded score of 75% was sent to mocklti
</div>
`;

exports[`LTIStatus LTIStatus component with lti state GRADEBOOK_STATUS_OK_NULL_SCORE_NOT_SENT returns noScoreSent 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-synced"
>
  No score has been sent to mocklti (Only passing scores are sent)
</div>
`;

exports[`LTIStatus LTIStatus component with no externalSystemLabel returns notLTI 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-lti"
>
   
</div>
`;

exports[`LTIStatus LTIStatus component with state GRADEBOOK_STATUS_OK_NO_OUTCOME_SERVICE returns notLTI 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-lti"
>
   
</div>
`;
